updated navbar to stretch to end of scrren on both sides. Also updated text align to be centered correctly. Also updated the toggle icon in responsive mode to show with white border line. also did some cleaning by deleting some code that was not being used.

--- a/src/App.css
+++ b/src/App.css
@@ -1,5 +1,4 @@
 body {
-  padding: 40px;
   font-family: Arial;
   text-align: center;
 };
